--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Run tests
       run: |
         xvfb-run raco test -p a86
-        xvfb-run raco rest -p langs
+        xvfb-run raco test -p langs
