--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,7 +28,8 @@ jobs:
         gcc --version
     - name: Install a86 package
       run: |
-        raco pkg install a86/
+        pwd
+        raco pkg install ../a86/
     - name: Install langs package
       run: |
         # This *should* use the locally installed a86
