--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/checkout@main
     - name: Install nasm
       run: sudo apt-get install nasm
+    - name: Install pandoc
+      run: |
+        curl -Ls https://github.com/jgm/pandoc/releases/download/2.11.2/pandoc-2.11.2-1-amd64.deb -o pandoc.deb
+        sudo dpkg -i pandoc.deb
     - name: Install Racket
       uses: Bogdanp/setup-racket@v1.10
       with:
