--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -42,6 +42,7 @@ jobs:
         path: a86/out/a86
   deploy:
     needs: build-docs
+    runs-on: ubuntu-22.04
     permissions:
       pages: write
       id-token: write
