--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,7 +35,7 @@ jobs:
           ++xref-in setup/xref load-collections-xref \
           --redirect-main http://docs.racket-lang.org/ \
           --dest out/ \
-          a86/a86/scribblings/a86.scrbl
+          a86/scribblings/a86.scrbl
     - name: Archive documentation
       uses: actions/upload-pages-artifact@v3
       with:
