--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -40,7 +40,7 @@ jobs:
       uses: actions/upload-pages-artifact@v3
       with:
         name: github-pages
-        path: a86/out/a86
+        path: out/a86
   deploy:
     needs: build-docs
     runs-on: ubuntu-22.04
